@@ -17,29 +17,28 @@
 
 package org.apache.solr.update.processor;
 
-import java.io.IOException;
 import java.util.UUID;
 import java.util.Locale;
 
+import org.apache.commons.lang.StringUtils;
 import org.apache.solr.common.SolrException;
 import static org.apache.solr.common.SolrException.ErrorCode.*;
-import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
-import org.apache.solr.update.AddUpdateCommand;
+import org.apache.solr.schema.SchemaField;
 
 
 /**
  * <p>
- * An update processor that adds a newly generated <code>UUID</code> value 
- * to any document being added that does not already have a value in the 
+ * An update processor that adds a newly generated <code>UUID</code> value
+ * to any document being added that does not already have a value in the
  * specified field.
  * </p>
  *
  * <p>
- * In the example configuration below, if a document does not contain a value 
- * in the <code>id</code> field, a new <code>UUID</code> will be generated 
+ * In the example configuration below, if a document does not contain a value
+ * in the <code>id</code> field, a new <code>UUID</code> will be generated
  * and added as the value of that field.
  * <p>
  *
@@ -48,19 +47,46 @@ import org.apache.solr.update.AddUpdateCommand;
  *   &lt;str name="fieldName"&gt;id&lt;/str&gt;
  * &lt;/processor&gt;
  * </pre>
- * 
+ *
+ * <p>
+ * If field name is omitted in processor configuration,
+ * then  @{link org.apache.solr.schema.IndexSchema#getUniqueKeyField()}</code>
+ * is used as field and a new <code>UUID</code> will be generated
+ * and added as the value of that field. The field type of the uniqueKeyField
+ * must be anything which accepts a string or UUID value.
+ * <p>
  * @see UUID
  */
-public class UUIDUpdateProcessorFactory
-  extends AbstractDefaultValueUpdateProcessorFactory {
+public class UUIDUpdateProcessorFactory extends UpdateRequestProcessorFactory {
 
-  @Override
-  public UpdateRequestProcessor getInstance(SolrQueryRequest req, 
-                                            SolrQueryResponse rsp, 
+  protected String fieldName = null;
+
+  @SuppressWarnings("unchecked")
+  public void init(NamedList args) {
+
+    Object obj = args.remove("fieldName");
+    if (null != obj) {
+      fieldName = obj.toString();
+    }
+
+    if (0 < args.size()) {
+      throw new SolrException(SERVER_ERROR,
+          "Unexpected init param(s): '" +
+              args.getName(0) + "'");
+    }
+  }
+
+  public UpdateRequestProcessor getInstance(SolrQueryRequest req,
+                                            SolrQueryResponse rsp,
                                             UpdateRequestProcessor next ) {
-    return new DefaultValueUpdateProcessor(fieldName, next) {
+    if (StringUtils.isEmpty(fieldName)) {
+      SchemaField schemaField = req.getSchema().getUniqueKeyField();
+      fieldName = schemaField.getName();
+    }
+
+    return new AbstractDefaultValueUpdateProcessorFactory.DefaultValueUpdateProcessor(fieldName, next) {
       @Override
-      public Object getDefaultValue() { 
+      public Object getDefaultValue() {
         return UUID.randomUUID().toString().toLowerCase(Locale.ROOT);
       }
     };
